# controle-horas

./: .gitignore  app.py  database.py  models.py  pyproject.toml
data/: controle_horas.db
services/: calculator.py  pdf_export.py
ui/: config_view.py  default_week_popup.py  history_view.py  monthly_view.py
