[project]
name = "controle-horas"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Antunes",email = "daniel.antunes@satellitus.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "matplotlib (>=3.10.8,<4.0.0)",
    "reportlab (>=4.4.10,<5.0.0)",
    "customtkinter (>=5.2.2,<6.0.0)"
]

[tool.poetry]
packages = [{include = "controle_horas", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
